test/classes/generic/with-runtime-fields-errors.error.borrowed.good
with-runtime-fields-errors.chpl:2: In module 'w':
with-runtime-fields-errors.chpl:27: error: creating a 'new borrowed' type is a not allowed
